--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Raleway:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>AutoSpare</title>
   </head>
   <body>
     <div id="root"></div>
